2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* ntlm.el(TopLevel): Require `poem'
	(ntlm-build-auth-request): Omit `request-bufIndex'
	(ntlm-build-auth-response): Omit `response', `ident' and `msgType'
	Use `string-as-unibyte' of `poem'.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el(sasl-scram-md5-parse-server-msg-1): Error
	if server's response cannot be parsed.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el(sasl-scram-md5-server-salt): New function.
	(sasl-scram-md5-response-2): Use `sasl-scram-md5-server-salt'

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el(sasl-scram-md5-make-unique-nonce): Rewrite.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el: Add comment.
	(sasl-scram-md5-steps): New variable.
	(sasl-scram-md5-make-client-msg-1): Add optional nonce.
	(sasl-scram-md5-make-client-msg-2): New function.
	(sasl-scram-md5-make-server-msg-2): Rewrite.
	(sasl-scram-md5-response-1): New function.
	(sasl-scram-md5-response-2): New function.
	(sasl-scram-md5-authenticate-server): New function.
	* test/test-sasl.el(test-sasl-scram-md5-imap): New function.

2001-02-16  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el: rename from scram-md5.el
	(TopLevel): Provide `sasl-scram'.
	Fix prefix.
	Fix comments.
	require `sasl'.
	(sasl-scram-make-unique-nonce): use `sasl-unique-id'.
	(sasl-scram-md5-unique-id-function): New variable.
	* sasl.el(sasl-mechanisms): Add SCRAM-MD5.
	(sasl-mechanism-alist): Ditto.

2001-02-16  Kenichi OKADA <okada@opaopa.org>

	* SLIM-TIPS: Fix.
	* md4.el(md4-pack-int16): Taken form ntlm.el
	(md4-pack-int32): Ditto.
	(md4-unpack-int16): Ditto.
	(md4-unpack-int32): Ditto.
	* ntlm.el (pack-int16): Delete.
	(pack-int32): Delete.
	(unpack-int16): Delete.
	(unpack-int32): Delete.

2001-02-16  Kenichi OKADA <okada@opaopa.org>

	* SLIM-TIPS: Fix.
	* sasl.el(sasl-mechanisms): Add NTLM.
	(sasl-mechanism-alist): Add NTLM.

2001-02-16  Kenichi OKADA <okada@opaopa.org>
